<resources>
    <string name="app_name">Story App</string>
    <string name="tv_welcome_title">Welcome To Story App</string>
    <string name="desc_welcome">Pour out your story because telling a story is an art to connect with other people and also an art to carve your imagination.</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="title_signup">Complete your data first.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login">Let\'s Start To Make Your Story</string>
    <string name="language">Language Setting</string>
    <string name="logout">Exit</string>
    <string name="addStory">Button Add Story</string>
    <string name="image_story">Image Story</string>
    <string name="author">Author Name</string>
    <string name="date_created">Date Created</string>
    <string name="desc_story">Story Description</string>
    <string name="preview_image">Preview Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="confirmExit">Exit Confirmation</string>
    <string name="exit">Are you sure you want to Exit/Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="storyEmpty">Story is Empty</string>
    <string name="detailStory">Detail Story</string>
    <string name="validEmail">Email must be filled in</string>
    <string name="validPassword">Password must be filled in</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="next">Next</string>
    <string name="validName">Name must be filled in</string>
    <string name="emailValid">Email must be filled in</string>
    <string name="passwordValid">Password must be filled in</string>
    <string name="account_created">Account with %1$s is ready. Lets login and start sharing story.</string>
    <string name="signupFail">SignUp failed, please try again!!!</string>
    <string name="uploadSuccess">Upload successful</string>
    <string name="storyUploadSuccess">Story uploaded successfully</string>
    <string name="tokenInfo">Token is not available</string>
    <string name="empty_image">The Image Cannot be empty</string>
    <string name="alert_invalid_email">Email Invalid</string>
    <string name="passMustbe">The password must not be less than 8 characters</string>
</resources>